# matrix_library

./: CMakeLists.txt  README.md  main.cpp  minusOperatorBench.cpp  pluBench.cpp  plusOperatorBench.cpp  powBench.cpp  qrBench.cpp  refBench.cpp  rowColManipulationBench.cpp  rrefBench.cpp  starOperatorBench.cpp  transposeBench.cpp  unaryMinusOperatorBench.cpp  utilBench.cpp
.github/workflows/: ci.yml  test.yml
include/: main.hpp
include/src/: matrix.hpp
include/test/: matrixTest.hpp
scripts/: compile.sh  emscripten_setup.sh
src/: matrix.cpp  trash.txt
test/: CMakeLists.txt
test/unit/matrix/: calcEigenTest.cpp  determinantTest.cpp  eigenTest.cpp  equalOperatorTest.cpp  getIndetityTest.cpp  inverseTest.cpp  isTriangularTest.cpp  minusOperatorTest.cpp  pluTest.cpp  plusOperatorTest.cpp  powTest.cpp  qrTest.cpp  refTest.cpp  rowColManipulationTest.cpp  rrefTest.cpp  starOperatorTest.cpp  transposeTest.cpp  unaryMinusOperatorTest.cpp  utilTest.cpp
test/unit/matrix/util/: util.cpp
